# EntropicWhisper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
packaging/: install-ubuntu.sh
src/entopicwhisper/: __init__.py  audio.py  cli.py  config.py  notes.py  providers.py  text.py  ui.py
src/entopicwhisper/templates/: index.html
src/entropicwhisper/: __init__.py  cli.py  clipboard.py  config.py  context.py  providers.py  text.py  ui.py
src/entropicwhisper/templates/: index.html
tests/: test_config.py  test_notes.py  test_text.py
